# pa-DRS-Crypt4GH-Client

./: .gitignore  README.md
.github/workflows/: run-tests.yaml
crypt4gh-common/: README.md  pyproject.toml
crypt4gh-common/crypt4gh_common/: __init__.py  _wrapper.py
crypt4gh-common/tests/: conftest.py  test_wrapper.py
drs-client/: README.md  pyproject.toml
drs-client/drs_client/: client.py  download.py  drs.py  upload.py
drs-client/tests/: conftest.py  test_client.py  test_drs.py  test_files.py  test_store.py  test_upload.py
drs-client/tests/data/: drs-client-test.yaml
