[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypt4gh_common"
description = "Common Crypt4gh-related functionality"
version = "0.1.0"
authors = []
dependencies = [
  "crypt4gh >= 1.6",
]

[project.optional-dependencies]
test = [
    "pytest",
]
